--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@
 
 /* --- What We Offer Section (layout_01.png style) --- */
 .page-offer-section.layout-01-style {
-    background: #0a0c1b;
+
     border-radius: 16px;
     max-width: 1200px;
     margin: 48px auto 48px auto;
@@ -848,7 +848,7 @@
     font-size: 1.08rem;
     font-weight: 700;
     color: #08376B;
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
 }
 
 .page-custdev-upgrade-desc {
@@ -1202,6 +1202,7 @@
 
 .page-hire-banner-img {
     /* flex: 0 0 340px; */
+    padding: 40px 48px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1405,7 +1406,7 @@
     min-width: 180px;
     font-size: 1.1rem;
     font-weight: 600;
-    color: #87ceeb;
+    color: #08376B;
     text-align: left;
 }
 
@@ -2161,7 +2162,7 @@ footer p span {
 .footer-divider {
     border: none;
     border-top: 1px solid #e5e7eb;
-    margin: 32px 0 24px 0;
+    /* margin: 32px 0 24px 0; */
 }
 
 .footer-middle {
@@ -2311,26 +2312,10 @@ footer p span {
     filter: none;
 }
 
-.footer-cert {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-
-.footer-cert-img {
-    height: 40px;
-    margin-left: 0;
-    filter: none;
-    background: #fff;
-    border-radius: 6px;
-    padding: 2px 4px;
-    border: 1px solid #e5e7eb;
-}
-
 .footer-copyright {
     color: #222;
     font-size: 1.01rem;
-    margin: 24px 0 0 0;
+    /* margin: 24px 0 0 0; */
     padding-bottom: 24px;
     text-align: left;
     letter-spacing: 0.01em;
@@ -2447,10 +2432,7 @@ footer p span {
         height: 16px;
     }
 
-    .footer-cert-img {
-        height: 28px;
-        padding: 1px 2px;
-    }
+
 
     .footer-copyright {
         font-size: 0.93rem;
@@ -2867,18 +2849,6 @@ footer p span {
     position: relative;
 }
 
-/* .own_carousel::before
-{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.6);
-} */
-
-
 .own_carousel>div.item {
     position: absolute;
     top: 0;
@@ -2891,7 +2861,7 @@ footer p span {
 
 }
 
-.own_carousel>div.item::before {
+.own_carousel>div.item .bg::before {
     content: "";
     position: absolute;
     top: 0;
@@ -2913,7 +2883,6 @@ footer p span {
     top: 20px;
     left: 20px;
     z-index: 5;
-
 }
 
 .own_carousel>div.item.active .bg {
@@ -2925,7 +2894,6 @@ footer p span {
     animation-iteration-count: infinite;
 }
 
-
 @keyframes zoomOut {
     0% {
         transform: scale(1);
@@ -2935,9 +2903,6 @@ footer p span {
         transform: scale(1.1);
     }
 }
-
-
-
 
 .own_carousel>div.item .bg,
 .own_carousel>div.item .bgs {
@@ -2954,7 +2919,6 @@ footer p span {
 .own_carousel .controls {
     position: absolute;
     top: 50%;
-    /* height: 50px; */
     transform: translateY(-50%);
     width: 100%;
     left: 0;
@@ -2976,7 +2940,6 @@ footer p span {
 .own_carousel .controls .left {
     left: 20px;
     background-image: url(../images/back.png);
-
 }
 
 .own_carousel .right {
@@ -2984,6 +2947,8 @@ footer p span {
     background-image: url(../images/next.png);
 
 }
+
+
 
 .footer_bottom {
     /* background-color: black; */
@@ -3871,7 +3836,7 @@ nav .wrapper.hover .language-wrapper #divider {
 }
 
 .connect-btn {
-    background: orange;
+    background: #08376B;
     color: #fff;
     font-weight: bold;
     border: none;
@@ -3884,7 +3849,8 @@ nav .wrapper.hover .language-wrapper #divider {
 }
 
 .connect-btn:hover {
-    background: #e67c00;
+    background: #35C0ED;
+    color: #08376B
 }
 
 @media (max-width: 900px) {
